# titanic-chat-agent

./: README.md
client/: .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt
client/components/: chat_ui.py
client/utils/: helper.py
server/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
server/app/: app.py  test.py
server/app/agent/: titanic_agent.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: chat.py
server/app/schemas/: chat.py
server/app/services/: agent_service.py  data_loader.py
